--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -44,7 +44,7 @@
 
 <ion-header>
   <ion-toolbar class="custom-toolbar">
-    <ion-title class="custom-title">Menu</ion-title>
+    <ion-title class="custom-title">Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
