--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -37,10 +37,11 @@
 
 
 
-  <ion-content>
-    <div class="contenedor-principal">
-      <div class="contenido">
-        <ion-img src="assets/img/logo5.png" class="logo blinking"></ion-img>
+<ion-content>
+  <div class="contenedor-principal">
+    <div class="contenido">
+        <ion-img src="assets/img/logo_robot.png"  class="logo blinking"></ion-img>
+        
         <ion-text color="primary">
           <h2>
             Bienvenidos
@@ -50,6 +51,6 @@
         </ion-text>
       </div>
       <div class="loader"></div>
-      <div id="progressText">{{ progress }}%</div>
-    </div>
-  </ion-content>
+    <div id="progressText">{{ progress }}%</div>
+  </div>
+</ion-content>
