--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -94,7 +94,7 @@
   position: absolute;
   width: 0%;
   height: 100%;
-  background-color: #007bff;
+  background-color: #40409F;
   animation: progress 2s linear forwards;
   left: 0; 
 }
@@ -112,7 +112,7 @@
   color:  #007bff;
 }
 .logo {
-  width: 60px; 
+  width: 100px; 
   margin: auto;
 }
 .logo img {
