--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -62,7 +62,7 @@
     box-shadow: none;
     width: 100%;
     height: 40px;
-    background-color: #7175b5;
+    background-color:#40409F;
     color: #fff;
     border-radius: 25px;
     box-shadow: 3px 3px 3px #b1b1b1,
