--- a/src/app/registros/registros.page.html
+++ b/src/app/registros/registros.page.html
@@ -61,7 +61,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/categorias"></ion-back-button>
     </ion-buttons>
-    <ion-title>registros</ion-title>
+    <ion-title>Registros</ion-title>
   </ion-toolbar>
 </ion-header>
 
