--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,6 +11,12 @@
 
 }
 
+.custom-icon {
+color: #7074b5;
+  }
+  
+
+
 .logo {
     width: 80px;
     margin: auto;
@@ -62,7 +68,7 @@
     box-shadow: none;
     width: 100%;
     height: 40px;
-    background-color: #7175b5;
+    background-color:#40409F;
     color: #fff;
     border-radius: 10px;
     box-shadow: 3px 3px 3px #b1b1b1,
@@ -71,7 +77,7 @@
 }
 
 .wrapper .btn:hover {
-    background-color: #7175b5;
+    background-color: #40409F;
 }
 .validar{
   color: red;
