Mensaje del commit

--- a/src/app/register-hospital/register-hospital.page.html
+++ b/src/app/register-hospital/register-hospital.page.html
@@ -50,7 +50,7 @@
           <img src="./assets/img/logo5.png" alt="">
       </div>
       <div class="text-center mt-4 name">
-         REGISTRARSE
+         REGISTRO DE HOSPITAL
       </div>
     <form [formGroup]="formularioregistro" (submit)="register(formularioregistro)">
       <div class="form-field d-flex align-items-center">
