--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,8 +10,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="mis-casas" routerLink="/tabs/mis-casas">
-      <ion-icon name="git-branch-outline"></ion-icon>
-      <ion-label>prediccion</ion-label>
+      <ion-icon name="medkit"></ion-icon>
+      <ion-label>Prediccion</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="perfil" routerLink="/tabs/perfil">
